[package]
name = "gantelet"
version = "0.1.2"
authors = ["Loïc Grobol <loic.grobol@gmail.com>"]
edition = "2018"
description = "A rusty implementation of GloVe"
license = "MIT"
homepage = "https://github.com/LoicGrobol/gantelet"


[dependencies]
clap = "~2.33.0"
fasthash = "0.4"

[[bin]]
name = "vocab-count"
path = "src/vocab_count.rs"