[package]
name = "gantelet"
version = "0.2.0"
authors = ["Loïc Grobol <loic.grobol@gmail.com>"]
edition = "2018"
description = "A rusty implementation of GloVe"
license = "MIT"
homepage = "https://github.com/LoicGrobol/gantelet"


[dependencies]
clap = "~2.33.0"
fasthash = "0.4"
indicatif = "0"

[[bin]]
name = "vocab-count"
path = "src/vocab_count.rs"

[[bin]]
name = "cooccur"
path = "src/cooccur.rs"
